Fresh commit after path fix

--- a/app.json
+++ b/app.json
@@ -63,7 +63,7 @@
     "extra": {
       "router": {},
       "eas": {
-        "projectId": "798b338e-12b2-4c31-b945-4fcc7c4254ca"
+        "projectId": ""
       }
     }
   }
